Added lib6647 as submodule. [General] - lib6647 is now a submodule.

--- a/build.gradle
+++ b/build.gradle
@@ -21,24 +21,20 @@ deploy {
         }
     }
     artifacts {
-        frcJavaArtifact('frcJava') {
+        frcJavaArtifact("frcJava") {
             targets << "roborio"
             // Debug can be overridden by command line, for use with VSCode
             debug = frc.getDebugOrDefault(false)
         }
         // Built in artifact to deploy arbitrary files to the roboRIO.
-        fileTreeArtifact('frcStaticFileDeploy') {
+        fileTreeArtifact("frcStaticFileDeploy") {
             // The directory below is the local directory to deploy
-            files = fileTree(dir: 'deploy')
+            files = fileTree(dir: "deploy")
             // Deploy to RoboRIO target, into /home/lvuser/deploy
             targets << "roborio"
-            directory = '/home/lvuser/deploy'
+            directory = "/home/lvuser/deploy"
         }
     }
-}
-
-repositories {
-    mavenLocal()
 }
 
 // Set this to true to enable desktop support.
@@ -47,20 +43,20 @@ def includeDesktopSupport = true
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
-	// WPILib dependencies.
+    // WPILib dependencies.
     implementation wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
-	implementation wpi.deps.vendor.java()
+    implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-	// Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    // Use JUnit test framework
+    testImplementation "junit:junit:4.12"
 	
-	// lib6647
-	implementation group: 'com.github.VOLTEC6647', name: 'lib6647', version: 'v1.3.0'
+    // lib6647
+    implementation project(":lib6647")
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
